# Threads

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Examples/: CMakeLists.txt  SignalExamples.cpp  SignalExamples.hpp  TaskQueueExamples.cpp  TaskQueueExamples.hpp  ThreadExamples.cpp  ThreadExamples.hpp  main.cpp
Tests/: CMakeLists.txt  SignalMocks.hpp  SignalTests.cpp  SignalTests.hpp  TaskQueueMocks.hpp  TaskQueueTests.cpp  TaskQueueTests.hpp  ThreadMocks.hpp  ThreadTests.cpp  ThreadTests.hpp  Utilities.hpp  main.cpp
ThreadSafeSignals/: MainThread.hpp  Signal.hpp  Thread.hpp  main.cpp
ThreadSafeSignals.xcodeproj/: project.pbxproj
ThreadSafeSignals.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ThreadSafeSignals.xcodeproj/xcuserdata/gusc.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: Signal.hpp  Thread.hpp
include/Threads/: SerialTaskQueue.hpp  Signal.hpp  TaskQueue.hpp  Thread.hpp  ThreadPool.hpp  Utilities.hpp
include/Threads/private/: LockedReference.hpp  ThreadApple.hpp  ThreadLinux.hpp  ThreadStructures.hpp  ThreadWindows.hpp  Utilities.hpp  function_traits.hpp
